{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "edce0809-cdb2-46ac-80c3-c07d2e93571c",
            "actions": [
                {
                    "name": "MainMenu",
                    "type": "Button",
                    "id": "424d0c12-8e83-413e-9697-30fa16aa8770",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GameConsole",
                    "type": "Button",
                    "id": "af8d6d14-b254-4b9b-bf94-af75de81c0a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "25c75b05-edc2-4b9c-94e9-81874a384985",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CharacterTab",
                    "type": "Button",
                    "id": "a5829008-6ee8-49e0-8227-13b9b21a401a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "7ecfaf14-fa1c-426a-82aa-ee1bf2c4d020",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AltFire",
                    "type": "Button",
                    "id": "4917f3b8-fb08-429b-a19c-91e8fa1e8931",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Highlight",
                    "type": "Button",
                    "id": "985b9ab9-e947-4430-9724-3ac71ca1f741",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "6f80ccba-f8de-4d36-a668-53c46757374a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSave",
                    "type": "Button",
                    "id": "69a8f0c7-5a65-4e58-a520-e163759d4bf1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickLoad",
                    "type": "Button",
                    "id": "1619e850-2d69-4b30-9a13-9cfb37e8f9f9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5b2ba741-1d4a-44ec-9e97-5fcad7df1bea",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48df4d31-8942-4c7a-b399-ca3a2079b8b0",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GameConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "211f83ce-0f7a-4509-bd7b-5199a4672c25",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e11f9f2-ad81-400e-9524-bebb6da5fa0c",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CharacterTab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee00c971-c25b-4ad4-9fab-0b9ef5788acd",
                    "path": "<Pointer>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65ea271f-a42e-453b-bb63-1b1a51042bef",
                    "path": "<Pointer>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5add0dc-f60b-43bf-8a3c-4bab4570e9d0",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Highlight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec6f2e7c-e6c1-49ed-9481-d69236d8f8de",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e9d0ad7-cbed-459f-9646-bec40c6dcb92",
                    "path": "<Keyboard>/f5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickSave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd68dd30-2644-41ef-b96c-1387612ab226",
                    "path": "<Keyboard>/f6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickLoad",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}